# logz-example-blinky

./: .gitmodules  CMakeLists.txt  README.md  prj.conf
src/: main.c
